minikube/ingress/fanout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fan-out-ingress
  namespace: default
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /blue
            backend:
              service:
                name: webserver-blue-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /green
            backend:
              service:
                name: webserver-green-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
