minikube/ingress/virtual-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host-ingress
  namespace: default
spec:
  rules:
    - host: blue.example.com
      http:
        paths:
          - backend:
              service:
                name: webserver-blue-svc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: green.example.com
      http:
        paths:
          - backend:
              service:
                name: webserver-green-svc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
